--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=full-stack-contactMgmtSys
 
+server.port=5454
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/scm1.0
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
