--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=5454
 spring.datasource.url=jdbc:mysql://localhost:3306/scm1.0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=MySql39kit
 
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
