--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=full-stack-contactMgmtSys
 
 server.port=5454
 
-
+spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://localhost:3306/scm1.0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${mysqlusername}
@@ -10,6 +10,6 @@ spring.datasource.password=${mysqlpassword}
 
 
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
