--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+#Security configuration
+spring.security.user.name=root
+spring.security.user.password=root
