--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #Security configuration
-spring.security.user.name=root
-spring.security.user.password=root
+#spring.security.user.name=root
+#spring.security.user.password=root
