--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.application.name=full-stack-contactMgmtSys
 
+#Port
 server.port=5454
 
-#spring.thymeleaf.cache=false
-spring.datasource.url=jdbc:mysql://localhost:3306/scm1.0
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${mysqlusername}
-spring.datasource.password=${mysqlpassword}
+#Thyemeleaf
+spring.thymeleaf.cache=false
 
+#Changing Database
+spring.profiles.active=sqlite
+#spring.profiles.active=mysql
 
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
 
 #Security configuration
 #spring.security.user.name=root
