--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=5454
 spring.thymeleaf.cache=false
 
 #Changing Database
-spring.profiles.active=sqlite
+#spring.profiles.active=sqlite
 #spring.profiles.active=mysql
 
 spring.jpa.show-sql=true
