Login with social media-> Google

--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.show-sql=true
 #Security configuration
 #spring.security.user.name=root
 #spring.security.user.password=root
+
+# This is to login using google with single click:
+#oauth2 client configuration for google
+spring.security.oauth2.client.registration.google.client-name=${google}
+spring.security.oauth2.client.registration.google.client-id=${googleClientId}
+spring.security.oauth2.client.registration.google.client-secret=${googleClientSecret}
