--- a/full-stack-contactMgmtSys/pom.xml
+++ b/full-stack-contactMgmtSys/pom.xml
@@ -85,6 +85,10 @@
             <artifactId>hibernate-community-dialects</artifactId>
             <version>6.5.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
 
     </dependencies>
 
