--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=5454
 spring.thymeleaf.cache=false
 
 #Changing Database
-#spring.profiles.active=sqlite
+spring.profiles.active=sqlite
 #spring.profiles.active=mysql
 
 spring.jpa.show-sql=true
@@ -21,3 +21,5 @@ spring.jpa.show-sql=true
 spring.security.oauth2.client.registration.google.client-name=${google}
 spring.security.oauth2.client.registration.google.client-id=${googleClientId}
 spring.security.oauth2.client.registration.google.client-secret=${googleClientSecret}
+
+
