login with facebook

--- a/full-stack-contactMgmtSys/src/main/resources/application.properties
+++ b/full-stack-contactMgmtSys/src/main/resources/application.properties
@@ -22,4 +22,9 @@ spring.security.oauth2.client.registration.google.client-name=${google}
 spring.security.oauth2.client.registration.google.client-id=${googleClientId}
 spring.security.oauth2.client.registration.google.client-secret=${googleClientSecret}
 
+# For Facebook
+spring.security.oauth2.client.registration.facebook.client-name=${facebook}
+spring.security.oauth2.client.registration.facebook.client-id=${facebookClientId}
+spring.security.oauth2.client.registration.facebook.client-secret=${facebookClientSecret}
+
 
